@@ -1,6 +1,8 @@
 ChangeLog for the Astro project.
 
 20200818:
+	* add monitoring thread to AtikCooler, stop to AtikCcd
+	* fix threads in QHY driver
 	* fix threads in simulator driver
 	* fix threads in Asi driver
 	* fix thread interface in Sx, ensure threads are terminated
